@@ -29,11 +29,31 @@ add_global_arguments('-I' + get_option('tabulate_include_dir'), language : 'cpp'
 protoc = find_program('protoc', required : true)
 protobuf_dep = dependency('protobuf', required : true)
 
+grpc = find_program('grpc_cpp_plugin', required : true)
+grpc_dep = dependency('grpc', required : true)
+
+cppc = meson.get_compiler('cpp')
+
+grpcpp = dependency('grpc++', required: false)
+if not grpcpp.found()
+  # find the lib without pkg-config
+  grpcpp = cppc.find_library('grpc++')
+endif
+
 gen = generator(protoc, \
    output    : ['@BASENAME@.pb.cc', '@BASENAME@.pb.h'],
    arguments : ['--proto_path=@CURRENT_SOURCE_DIR@/src', '--cpp_out=@BUILD_DIR@', '@PLAINNAME@'])
 
-generated = gen.process('src/pop3.proto')
+
+grpc_gen = generator(protoc,
+  output    : ['@BASENAME@.grpc.pb.cc', '@BASENAME@.grpc.pb.h'],
+  arguments : ['--proto_path=@CURRENT_SOURCE_DIR@/src',
+    '--grpc_out=@BUILD_DIR@',
+    '--plugin=protoc-gen-grpc=' + grpc.path(),
+    '@INPUT@'])
+
+generated_pb = gen.process('src/pop3.proto')
+generated_rpc = grpc_gen.process('src/pop3.proto')
 # # end protobuf
 
 inc_dir = include_directories([ 'include',
@@ -44,10 +64,10 @@ inc_dir = include_directories([ 'include',
                               ])
 
 
-src = ['src/main.cpp', 'src/POP3client.cpp', 'src/Util.cpp', 'src/Interactive.cpp', 'src/ProtoInterface.cpp', generated]
+src = ['src/main.cpp', 'src/POP3client.cpp', 'src/Util.cpp', 'src/Interactive.cpp', 'src/ProtoInterface.cpp', generated_pb, generated_rpc]
 
 executable('bubble',
            sources : src,
            include_directories : inc_dir,
-           dependencies : [gnutls_dep, protobuf_dep]
+           dependencies : [gnutls_dep, protobuf_dep, grpc_dep, grpcpp]
           )
