@@ -9,11 +9,12 @@ catnr:  03
 
 #include "ProtoInterface.h"
 
-// TEMP
-#include "pop3.pb.h"
-
-
 using namespace std;
+
+using grpc::Server;
+using grpc::ServerBuilder;
+using grpc::ServerContext;
+using grpc::Status;
 
 int ProtoInterface::retrieve_message_meta_proto(int message_id, pop3msg::MailMeta *temp_mail_meta){
     vector<string> res_vec = client.retrieve_message_metadata(message_id);
@@ -30,7 +31,7 @@ int ProtoInterface::retrieve_message_meta_proto(int message_id, pop3msg::MailMet
     return 0;
 }
 
-pop3msg::MailList ProtoInterface::retrieve_messages(int amount){
+void ProtoInterface::retrieve_messages(pop3msg::MailList* temp_mail_list, int amount){
     int total_messages = client.get_total_messages();
 
     if(amount > total_messages){
@@ -39,14 +40,12 @@ pop3msg::MailList ProtoInterface::retrieve_messages(int amount){
 
     int retrieve = 0;
 
-    pop3msg::MailList temp_mail_list;
-
     int check{0};
 
     int cur_message = total_messages;
 
     while(cur_message > (total_messages - amount)){
-        check = retrieve_message_meta_proto(cur_message, temp_mail_list.add_mails());
+        check = retrieve_message_meta_proto(cur_message, temp_mail_list->add_mails());
 
         if(check){
             retrieve += 1;
@@ -57,12 +56,10 @@ pop3msg::MailList ProtoInterface::retrieve_messages(int amount){
 
     int i = 1;
     while(i <= retrieve){
-        retrieve_message_meta_proto(i, temp_mail_list.add_mails());
+        retrieve_message_meta_proto(i, temp_mail_list->add_mails());
 
         i += 1;
     }
-
-    return temp_mail_list;
 }
 
 pop3msg::Success ProtoInterface::save_mail(int message_id){
@@ -86,3 +83,19 @@ pop3msg::Success ProtoInterface::delete_message(int message_id){
 
     return temp_suc;
 }
+
+/*
+void run(string addr){
+    
+    POP3CSImplementation service;
+
+    ServerBuilder builder;
+
+    builder.AddListeningPort(addr, grpc::InsecureServerCredentials());
+    builder.RegisterService(&service);
+
+    std::unique_ptr<Server> server(builder.BuildAndStart());
+    std::cout << "Server listening on port: " << addr << std::endl;
+
+    server->Wait();
+}*/
